model trainer added

--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -106,10 +106,15 @@
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(self,config_filepath=CONFIG_FILE_PATH,\n",
-    "                 params_filepath=PARAMS_FILE_PATH):\n",
-    "        self.config=read_yaml(CONFIG_FILE_PATH)\n",
-    "        self.params=read_yaml(PARAMS_FILE_PATH)\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_roots])\n",
     "\n",
     "        create_directories([self.config.artifacts_roots])\n",
     "        \n",
@@ -146,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +168,7 @@
     "        self.save_model(path=self.config.base_model_path,model=self.model)\n",
     "\n",
     "    @staticmethod\n",
-    "    def _prepare_base_model(model,classes,freeze_all,freeze_till,learning_rate):\n",
+    "    def _prepare_full_model(model,classes,freeze_all,freeze_till,learning_rate):\n",
     "        if freeze_all:\n",
     "            for layers in model.layers:\n",
     "                model.trainable=False\n",
@@ -209,22 +214,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-17 15:14:26,658: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-05-17 15:14:26,662: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-17 15:14:26,662: INFO: common: created directory at: artifacts]\n",
-      "[2024-05-17 15:14:27,177: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "[2024-05-20 20:50:40,813: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-05-20 20:50:40,817: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-20 20:50:40,821: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-20 20:50:40,824: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-20 20:50:41,649: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_2 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      " input_1 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
       "                                                                 \n",
       " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
       "                                                                 \n",
